@@ -9,12 +9,14 @@
     PKG_FILE=${PKG}-${PKG_VERSION}.tar.bz2
     PKG_URL="https://ftp.pcre.org/pub/pcre/${PKG_FILE}"
     PKG_DEPS="gcc"
+    [ ! -z "${GCC_EXTRA_VER}" ] && PKG_DEPS="${PKG_DEPS} gcc-extra"
 
     CheckPkgVersion
     CheckSourcesAndDependencies
 
     if IsBuildRequired
     then
+        [ ! -z "${GCC_EXTRA_VER}" ] && export USE_GCC_EXTRA="${GCC_EXTRA_VER}"
         ProcessStandardAutotoolsProject \
             --enable-pcre16 \
             --enable-utf \
@@ -23,6 +25,9 @@
             --disable-pcregrep-libz \
             --disable-pcregrep-libbz2 \
             --disable-pcretest-libreadline
+
+        # It is very important to unset USE_GCC_EXTRA variable here!
+        [ ! -z "${GCC_EXTRA_VER}" ] && unset USE_GCC_EXTRA
 
         cd "${PREFIX}/bin/"
         ln -sf "${SYSROOT}/usr/bin/${PKG}-config" "${TARGET}-${PKG}-config"
